<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
         tools:context="com.sofit.realtimetext.RealTimeTextDetection"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                  android:textColor="@color/white"
                android:textSize="@dimen/_20sdp">
            <TextView
                    android:layout_width="wrap_content"
                     android:text="@string/scanned_pdf_files"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/_18sdp"
                    android:layout_height="wrap_content"
                    tools:ignore="RelativeOverlap" />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo"
                    android:onClick="shareClick"
                    android:id="@+id/share_img"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:visibility="gone"
                    android:src="@drawable/ic_share"
                    android:padding="@dimen/_5sdp"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    tools:ignore="UsingOnClickInXml" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <SurfaceView
            android:id="@+id/surfaceView_myLast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_text"
            android:textColor="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/et_myLast"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/_10sdp"
            android:autofillHints="@string/no_text" />

    <Button
            android:id="@+id/btnstopdetection"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_stop"
            android:onClick="stopDetection"
            app:layout_constraintEnd_toEndOf="@+id/surfaceView_myLast"
            app:layout_constraintStart_toStartOf="@+id/surfaceView_myLast"
            app:layout_constraintTop_toTopOf="@+id/surfaceView_myLast"
            tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>