<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sofit.pdfScanner.activities.PdfScanningActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bannerAdContainer">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line_g1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/line_g1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:id="@+id/img_main_scan"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_scan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_file"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_main_scan" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
                android:id="@+id/rl_pick_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/blue_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_g1"
                app:layout_constraintWidth_percent="0.9"
                tools:ignore="UsingOnClickInXml">

            <ImageView
                    android:id="@+id/img_pick"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_image" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/img_pick"
                    android:text="@string/pick_an_image"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/rl_show_pdf_file"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/purple_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_pick_image"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintWidth_percent="0.9"
                tools:ignore="UsingOnClickInXml">

            <ImageView
                    android:id="@+id/img_pdf"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_pdf" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/img_pdf"
                    android:text="@string/show_pdf_files"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp" />
        </RelativeLayout>


        <ImageView
                android:id="@+id/imgBitmap"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/todo"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/btnSave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/line_g1" />

        <Button
                android:id="@+id/btnSave"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/blue_btn_card"
                android:padding="20dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.sofit.adshelper.customViews.BannerAdView
            android:id="@+id/bannerAdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="invisible" />
</RelativeLayout>