<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">


    <ImageView
            android:id="@+id/top_img"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:elevation="@dimen/_4sdp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@id/dialog_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dialog_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_background"
            android:background="@drawable/drawable_background_gradiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="-5dp"
                android:padding="@dimen/_10sdp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
                android:id="@+id/img_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:cardCornerRadius="@dimen/_40sdp"
                app:layout_constraintBottom_toBottomOf="@id/img_listening"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_listening">




        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/img_listening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:cardCornerRadius="@dimen/_40sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_close"
                app:layout_constraintVertical_bias="0">



        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/tv_bold_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/camera_scanner"
                android:textColor="@color/white"
                android:textSize="@dimen/_23sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_listening" />

        <TextView
                android:id="@+id/tv_set_word_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:paddingStart="@dimen/_80sdp"
                android:paddingEnd="@dimen/_80sdp"
                android:text="@string/do_you_want_to_exit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bold_word" />

        <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/white"
                android:text="@string/yes"
                app:layout_constraintHorizontal_bias="0.8"
                android:background="@drawable/blue_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_set_word_for" />
        <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/white"
                android:text="@string/no"
                app:layout_constraintHorizontal_bias="0.2"
                android:background="@drawable/red_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_set_word_for" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>