<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sofit.ocr.QRScanningActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_above="@+id/bannerAdContainer"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/qr_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/qr_code"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <View
                android:id="@+id/view_empty"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
                android:id="@+id/txtContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button"
                android:padding="@dimen/_15sdp"
                android:text="@string/information"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_empty" />

        <ImageView
                android:id="@+id/button"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/round_blue_card"
                android:contentDescription="@string/todo"
                android:elevation="3dp"
                android:padding="@dimen/_20sdp"
                android:src="@drawable/ic_scan_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.sofit.adshelper.customViews.BannerAdView
            android:id="@+id/bannerAdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="invisible" />
</RelativeLayout>